--- a/.htaccess
+++ b/.htaccess
@@ -1,3 +1,6 @@
+# 網站根目錄預設檔案
+DirectoryIndex index.html
+
 # 網站效能優化設定
 # Enable compression
 <IfModule mod_deflate.c>
@@ -83,21 +86,35 @@ ErrorDocument 404 /404.html
     Deny from all
 </FilesMatch>
 
-# Force HTTPS (when SSL is enabled)
-<IfModule mod_rewrite.c>
-    RewriteEngine On
-    RewriteCond %{HTTPS} off
-    RewriteRule ^(.*)$ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
-</IfModule>
-
 # HSTS Security Header
 <IfModule mod_headers.c>
     Header always set Strict-Transport-Security "max-age=63072000; includeSubDomains; preload"
 </IfModule>
 
-# WWW Redirect
+# URL 重寫與重定向規則
 <IfModule mod_rewrite.c>
     RewriteEngine On
+
+    # 規則 1: 強制使用 HTTPS
+    RewriteCond %{HTTPS} off
+    RewriteRule ^(.*)$ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
+
+    # 規則 2: 將 www 重定向到非 www
     RewriteCond %{HTTP_HOST} ^www\.(.*)$ [NC]
     RewriteRule ^(.*)$ https://%1/$1 [R=301,L]
-</IfModule> 
+    
+    # 規則 3: 將 index.html 重定向到根目錄
+    RewriteCond %{THE_REQUEST} ^[A-Z]{3,9}\ /index\.html\ HTTP/
+    RewriteRule ^index\.html$ / [R=301,L]
+    
+    # 規則 4: 移除所有 .html 副檔名（外部重定向）
+    RewriteCond %{THE_REQUEST} ^[A-Z]{3,9}\ /([^/]+)\.html\ HTTP/
+    RewriteCond %1 !^index$
+    RewriteRule ^([^/]+)\.html$ /$1 [R=301,L]
+    
+    # 規則 5: 內部重寫無副檔名的請求到 .html 檔案
+    RewriteCond %{REQUEST_FILENAME} !-f
+    RewriteCond %{REQUEST_FILENAME} !-d
+    RewriteCond %{REQUEST_FILENAME}.html -f
+    RewriteRule ^([^/]+)$ $1.html [L]
+</IfModule>
