--- a/.htaccess
+++ b/.htaccess
@@ -1,124 +1,126 @@
-# 網站根目錄預設檔案
-DirectoryIndex index.html
+############################################
+#  基本設定
+############################################
+DirectoryIndex index.html index.php
 
-# 網站效能優化設定
-# Enable compression
+############################################
+#  GZIP / Brotli 壓縮（mod_deflate）
+############################################
 <IfModule mod_deflate.c>
-    # Compress HTML, CSS, JavaScript, Text, XML and fonts
-    AddOutputFilterByType DEFLATE application/javascript
-    AddOutputFilterByType DEFLATE application/rss+xml
-    AddOutputFilterByType DEFLATE application/vnd.ms-fontobject
-    AddOutputFilterByType DEFLATE application/x-font
-    AddOutputFilterByType DEFLATE application/x-font-opentype
-    AddOutputFilterByType DEFLATE application/x-font-otf
-    AddOutputFilterByType DEFLATE application/x-font-truetype
-    AddOutputFilterByType DEFLATE application/x-font-ttf
-    AddOutputFilterByType DEFLATE application/x-javascript
-    AddOutputFilterByType DEFLATE application/xhtml+xml
-    AddOutputFilterByType DEFLATE application/xml
-    AddOutputFilterByType DEFLATE font/opentype
-    AddOutputFilterByType DEFLATE font/otf
-    AddOutputFilterByType DEFLATE font/ttf
-    AddOutputFilterByType DEFLATE image/svg+xml
-    AddOutputFilterByType DEFLATE image/x-icon
-    AddOutputFilterByType DEFLATE text/css
-    AddOutputFilterByType DEFLATE text/html
-    AddOutputFilterByType DEFLATE text/javascript
-    AddOutputFilterByType DEFLATE text/plain
-    AddOutputFilterByType DEFLATE text/xml
+  AddOutputFilterByType DEFLATE text/html text/plain text/css
+  AddOutputFilterByType DEFLATE application/javascript application/json
+  AddOutputFilterByType DEFLATE image/svg+xml
+  AddOutputFilterByType DEFLATE font/woff font/woff2
+  AddOutputFilterByType DEFLATE text/xml application/xml
 </IfModule>
 
-# Leverage Browser Caching
+############################################
+#  Browser Cache（mod_expires）
+############################################
 <IfModule mod_expires.c>
-    ExpiresActive on
+  ExpiresActive On
+  # 圖片 & 影片
+  ExpiresByType image/png  "access plus 1 year"
+  ExpiresByType image/jpg  "access plus 1 year"
+  ExpiresByType image/jpeg "access plus 1 year"
+  ExpiresByType image/gif  "access plus 1 year"
+  ExpiresByType image/webp "access plus 1 year"
+  ExpiresByType image/svg+xml "access plus 1 year"
+  ExpiresByType image/x-icon "access plus 1 year"
+  ExpiresByType video/mp4  "access plus 1 year"
 
-    # Images
-    ExpiresByType image/jpg "access plus 1 month"
-    ExpiresByType image/jpeg "access plus 1 month"
-    ExpiresByType image/gif "access plus 1 month"
-    ExpiresByType image/png "access plus 1 month"
-    ExpiresByType image/webp "access plus 1 month"
-    ExpiresByType image/svg+xml "access plus 1 month"
-    ExpiresByType image/x-icon "access plus 1 year"
-
-    # Video
-    ExpiresByType video/mp4 "access plus 1 month"
-    ExpiresByType video/avi "access plus 1 month"
-
-    # CSS, JavaScript
-    ExpiresByType text/css "access plus 1 month"
-    ExpiresByType application/javascript "access plus 1 month"
-    ExpiresByType text/javascript "access plus 1 month"
-
-    # Others
-    ExpiresByType application/pdf "access plus 1 month"
-    ExpiresByType application/x-shockwave-flash "access plus 1 month"
+  # CSS / JS（我們的自定義CSS檔案也受益）
+  ExpiresByType text/css               "access plus 1 month"
+  ExpiresByType application/javascript "access plus 1 month"
+  
+  # 字體檔案
+  ExpiresByType font/woff  "access plus 1 year"
+  ExpiresByType font/woff2 "access plus 1 year"
+  ExpiresByType font/ttf   "access plus 1 year"
+  ExpiresByType font/otf   "access plus 1 year"
 </IfModule>
 
-# Enable Keep-Alive
+############################################
+#  安全與 CORS 標頭（mod_headers）
+############################################
 <IfModule mod_headers.c>
-    Header always set Connection keep-alive
-    
-    # Security Headers
-    Header always set X-Content-Type-Options nosniff
-    Header always set X-Frame-Options DENY
-    Header always set X-XSS-Protection "1; mode=block"
-    Header always set Referrer-Policy "strict-origin-when-cross-origin"
-    
-    # CORS Headers for fonts
-    <FilesMatch "\.(ttf|ttc|otf|eot|woff|woff2|font.css)$">
-        Header set Access-Control-Allow-Origin "*"
-    </FilesMatch>
+  # 基礎安全
+  Header always set X-Content-Type-Options "nosniff"
+  Header always set X-Frame-Options "DENY"
+  Header always set Referrer-Policy "strict-origin-when-cross-origin"
+  Header always set X-XSS-Protection "1; mode=block"
+
+  # HSTS（兩年，含子網域，可選 preload）
+  Header always set Strict-Transport-Security "max-age=63072000; includeSubDomains; preload"
+
+  # Keep-Alive 連線優化
+  Header always set Connection keep-alive
+
+  # 字體 CORS（支援我們的自定義圖標字體）
+  <FilesMatch "\.(ttf|otf|woff|woff2)$">
+    Header set Access-Control-Allow-Origin "*"
+  </FilesMatch>
+  
+  # CSS檔案快取優化
+  <FilesMatch "\.(css)$">
+    Header set Cache-Control "public, max-age=2592000"
+  </FilesMatch>
 </IfModule>
 
-# 404 Error Page
+############################################
+#  自訂 404 頁面
+############################################
 ErrorDocument 404 /404.html
 
-# Security: Prevent access to sensitive files
-<FilesMatch "\.(htaccess|htpasswd|ini|log|sh|inc|bak)$">
-    Order Allow,Deny
-    Deny from all
+############################################
+#  敏感檔案拒絕存取
+############################################
+<FilesMatch "\.(htaccess|htpasswd|ini|log|sh|inc|bak|git|gitignore|ps1)$">
+  Require all denied
 </FilesMatch>
 
-# Prevent access to scripts
-<FilesMatch "\.(ps1)$">
-    Order Allow,Deny
-    Deny from all
-</FilesMatch>
+############################################
+#  URL Rewrite 與轉向規則（mod_rewrite）
+############################################
+<IfModule mod_rewrite.c>
+  RewriteEngine On
 
-# HSTS Security Header
-<IfModule mod_headers.c>
-    Header always set Strict-Transport-Security "max-age=63072000; includeSubDomains; preload"
+  # --- 0) Cloudflare 優化功能處理 ---
+  #    針對性處理可能造成404的Cloudflare功能
+  RewriteCond %{REQUEST_URI} ^/cdn-cgi/(speed|rum|speculation)/ [NC]
+  RewriteRule ^ - [R=404,L]
+
+  # --- 1) 一次完成 HTTPS + 去除 www ---
+  RewriteCond %{HTTPS} !=on [OR]
+  RewriteCond %{HTTP_HOST} ^www\.(.+)$ [NC]
+  RewriteRule ^ https://%1%{REQUEST_URI} [L,R=301]
+
+  # --- 2) /index.html → / ---
+  RewriteRule ^index\.html$ / [R=301,L]
+
+  # --- 3) 去掉 .html 副檔名（外部 301）---
+  RewriteCond %{THE_REQUEST} \s/+(.+?)\.html[\s?] [NC]
+  RewriteRule ^ %1 [R=301,L,NE]
+
+  # --- 4) 無副檔名時，內部補 .html ---
+  RewriteCond %{REQUEST_FILENAME} !-f
+  RewriteCond %{REQUEST_FILENAME} !-d
+  RewriteCond %{REQUEST_FILENAME}.html -f
+  RewriteRule ^(.+?)/?$ $1.html [L]
 </IfModule>
 
-# URL 重寫與重定向規則
-<IfModule mod_rewrite.c>
-    RewriteEngine On
-
-    # Cloudflare 錯誤處理：靜默處理Cloudflare優化功能請求
-    RewriteCond %{REQUEST_URI} ^/cdn-cgi/ [NC]
-    RewriteRule .* - [R=404,L]
-    
-    # 規則 1: 強制使用 HTTPS
-    RewriteCond %{HTTPS} off
-    RewriteRule ^(.*)$ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
-
-    # 規則 2: 將 www 重定向到非 www
-    RewriteCond %{HTTP_HOST} ^www\.(.*)$ [NC]
-    RewriteRule ^(.*)$ https://%1/$1 [R=301,L]
-    
-    # 規則 3: 將 index.html 重定向到根目錄
-    RewriteCond %{THE_REQUEST} ^[A-Z]{3,9}\ /index\.html\ HTTP/
-    RewriteRule ^index\.html$ / [R=301,L]
-    
-    # 規則 4: 移除所有 .html 副檔名（外部重定向）
-    RewriteCond %{THE_REQUEST} ^[A-Z]{3,9}\ /([^/]+)\.html\ HTTP/
-    RewriteCond %1 !^index$
-    RewriteRule ^([^/]+)\.html$ /$1 [R=301,L]
-    
-    # 規則 5: 內部重寫無副檔名的請求到 .html 檔案
-    RewriteCond %{REQUEST_FILENAME} !-f
-    RewriteCond %{REQUEST_FILENAME} !-d
-    RewriteCond %{REQUEST_FILENAME}.html -f
-    RewriteRule ^([^/]+)$ $1.html [L]
+############################################
+#  CSS 優化專用設定
+############################################
+<IfModule mod_headers.c>
+  # 為我們的自定義CSS檔案設定最佳化標頭
+  <FilesMatch "custom-icons\.css">
+    Header set Cache-Control "public, max-age=2592000"
+    Header set X-Content-Type-Options "nosniff"
+  </FilesMatch>
+  
+  # 主要CSS檔案預載入提示
+  <FilesMatch "(home|main)\.css">
+    Header set Link "</styles/custom-icons.css>; rel=preload; as=style"
+  </FilesMatch>
 </IfModule>
