--- a/assets/manifest.json
+++ b/assets/manifest.json
@@ -9,12 +9,12 @@
     "orientation": "portrait-primary",
     "icons": [
         {
-            "src": "images/logo/favicon-192x192.png",
+            "src": "assets/icon-192.png",
             "sizes": "192x192",
             "type": "image/png"
         },
         {
-            "src": "images/logo/favicon-512x512.png",
+            "src": "assets/icon-512.png",
             "sizes": "512x512",
             "type": "image/png"
         }
