--- a/kiwi-villa-astro/package.json
+++ b/kiwi-villa-astro/package.json
@@ -11,12 +11,10 @@
   "dependencies": {
     "@astrojs/partytown": "^2.1.4",
     "@astrojs/sitemap": "^3.4.1",
-    "@iconify-json/heroicons": "^1.2.2",
-    "@iconify-json/simple-icons": "^1.2.40",
     "@tailwindcss/vite": "^4.0.0-beta",
     "astro": "^5.10.1",
-    "astro-icon": "^1.1.5",
     "astro-seo": "^0.8.4",
+    "iconify-icon": "^3.0.0",
     "motion": "^12.19.2",
     "tailwindcss": "^4.0.0-beta"
   },
