--- a/kiwi-villa-astro/package.json
+++ b/kiwi-villa-astro/package.json
@@ -23,6 +23,7 @@
   "devDependencies": {
     "@playwright/test": "^1.53.1",
     "prettier": "^3.6.2",
-    "prettier-plugin-astro": "^0.14.1"
+    "prettier-plugin-astro": "^0.14.1",
+    "terser": "^5.43.1"
   }
 }
